cleanup and added "add annotation" endpoint
